<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lipa Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sam">SAM</string>
    <string name="microsd">microSD</string>
    <string name="p2p">P2P</string>
    <string name="relay">RELAY\n/LOCK</string>
    <string name="camera">Camera</string>
    <string name="rtc">RTC</string>
    <string name="opensw">OPEN\nSW</string>
    <string name="ethernet">Ethernet</string>
    <string name="speaker">Sound</string>
    <string name="doorsw">DOOR\nSW</string>
    <string name="wifi">Wifi</string>
    <string name="serial">Serial</string>
    <string name="current_time">Curr. Time</string>
    <string name="f1">F1\nKEY</string>
    <string name="f2">F2\nKEY</string>
    <string name="f3">F3\nKEY</string>
    <string name="f4">F4\nKEY</string>
    <string name="rfa_off">RF-A ON</string>
    <string name="rfb_off">RF-B ON</string>
    <string name="rfc_off">RF-C ON</string>
    <string name="rfa_on">RF-A OFF</string>
    <string name="rfb_on">RF-B OFF</string>
    <string name="rfc_on">RF-C OFF</string>
    <string name="clear">CLEAR</string>
    <string name="exit">EXIT</string>

    <string name="wait_for_the_camera_setting_just_a_second">Wait for the camera setting just a second.</string>
    <string name="touch_your_phone_to_NFC_logo.">Touch your phone to NFC logo.</string>
    <string name="insert_sample_file_to_under_adpop_folder">Insert sample file to under adpop folder.</string>
    <string name="complete_the_recognition">Recognition was successful.</string>
    <string name="barcode_qr_viewed_within_the_rectangle.">Barcode or QR viewed within the rectangle.</string>
    <string name="the_position_of_the_camera">The position of the camera</string>
    <string name="thank_you_for_using">Thank you for using.</string>
    <string name="mediavol">Media Volume : </string>

    <string name="prefs_reader_volume">Volume</string>
    <string name="prefs_reader_setting">setting</string>
    <string name="reader_setting">SETTING</string>
    <string name="prefs_reader_setting_basic">basic</string>
    <string name="basic_info">BASIC INFO.</string>
    <string name="title_activity_video">Video main</string>
    <string name="title_activity_student_charge">Student Charge</string>
    <string name="title_activity_student_gate">Student Gate Pass</string>
    <string name="title_activity_student_meal">Student Meal</string>
    <string name="title_activity_canteen">Canteen Operator</string>
    <string name="title_activity_canteen_view_trans">Canteen Activity</string>
    <string name="title_activity_search_student">Search Student</string>
    <string name="title_activity_set_device_name">SetDeviceName</string>
    <string name="title_activity_set_partner_device_name">SetPartnerDeviceName</string>

    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="discover_peers_button">discover</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
</resources>
