<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="fill_parent"
        android:orientation="vertical" >


        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textOff="Serial On"
            android:textOn="Serial Off" />

        <ToggleButton
            android:id="@+id/toggleButton3"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textOff="Camera On"
            android:textOn="Camera Off" />

        <ToggleButton
            android:id="@+id/toggleButton4"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textOff="Ethernet On"
            android:textOn="Ethernet Off" />

        <ToggleButton
            android:id="@+id/toggleButton5"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textOff="Wifi On"
            android:textOn="Wifi Off" />

        <ToggleButton
            android:id="@+id/toggleButton6"
            android:layout_width="120dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:textOff="Aging On"
            android:textOn="Aging Off" />
        <Button
            android:id="@+id/toggleButton7"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:text="RF TEST" 
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4.5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="9" >

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="@string/current_time"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:text="Auto Test"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:visibility="invisible" />

        </LinearLayout>

        <EditText
            android:id="@+id/editLog"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:focusable="false"
            android:inputType="textMultiLine" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="5.5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="70dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView02"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/relay"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/relay"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView03"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/camera"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/camera"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView08"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/speaker"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/speaker"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView05"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/microsd"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/microsd"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView06"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/opensw"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/opensw"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView07"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/ethernet"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ethernet"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="280dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView10"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/doorsw"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/doorsw"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView11"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/wifi"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/wifi"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/ImageView12"
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:contentDescription="@string/serial"
                        android:src="@drawable/idle" />

                    <TextView
                        android:id="@+id/TextView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/serial"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ImageView13"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/f1"
                    android:src="@drawable/idle" />

                <TextView
                    android:id="@+id/TextView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/f1"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ImageView14"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/f2"
                    android:src="@drawable/idle" />

                <TextView
                    android:id="@+id/TextView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/f2"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ImageView15"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/f3"
                    android:src="@drawable/idle" />

                <TextView
                    android:id="@+id/TextView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/f3"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/ImageView16"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/f4"
                    android:src="@drawable/idle" />

                <TextView
                    android:id="@+id/TextView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/f4"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>